<resources>
    <string name="app_name">movie</string>
    <string name="welcome">欢迎使用</string>
    <string name="search_hint">请输入影片名称</string>
    <string name="home">首页</string>
    <string name="movie">电影</string>
    <string name="tv">电视剧</string>
    <string name="user">用户</string>
    <string name="play_no_score">暂无评分</string>
    <string name="detail_plot">剧情</string>
    <string name="detail_star">主演</string>
    <string name="your_like">猜你想看</string>
    <string name="recommend">推荐</string>
    <string name="home_hot">热门</string>
    <string name="home_play">预告</string>
    <string name="home_new">最新</string>
    <string name="home_classify">分类</string>
    <string name="user_day">使用天数</string>
    <string name="user_favorite_count">收藏</string>
    <string name="user_play_record_count">观看记录</string>
    <string name="user_view_record_count">浏览记录</string>
    <string name="user_favorite">我的收藏</string>
    <string name="no_data">暂无数据</string>
    <string name="user_record">我浏览过的电影</string>
    <string name="user_movie_talk">电影圈</string>
    <string name="user_music">音乐</string>
    <string name="user_applet">小程序</string>
    <string name="detail_no_play">暂无播放资源</string>
    <string name="play_url">播放地址</string>
    <string name="search">搜索</string>
    <string name="search_record">搜索记录</string>
    <string name="search_record_no_data">暂无搜索记录</string>
    <string name="user_avater">头像</string>
    <string name="user_username">昵称</string>
    <string name="user_tel">电话</string>
    <string name="user_email">邮箱</string>
    <string name="user_birthday">出生日期</string>
    <string name="user_sex">性别</string>
    <string name="user_sign">个性签名</string>
    <string name="user_region">地区</string>
    <string name="user_logout">退出登录</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="edit_cancel">取消</string>
    <string name="edit_sure">确定</string>
    <string name="music_circle">音乐圈</string>
    <string name="dialog_tip">提示</string>
    <string name="dialog_logout">是否要退出登录?</string>
    <string name="user_empty_tip">账号不能为空</string>
    <string name="password_empty_tip">密码不能为空</string>
    <string name="password_length_tip">请输入大于或者等于6位数的密码</string>
    <string name="login_err_tip">账号或密码错误</string>
    <string name="login_success_tip">登录成功</string>
    <string name="no_null_tip">登录成功</string>
    <string name="update_success_tip">更改用户信息成功</string>
    <string name="update_fail_tip">更改用户信息失败</string>
    <string name="user_id">账号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="user_exist_tip">账号已存在</string>
    <string name="error_tip">服务器错误</string>
    <string name="user_verified_tip">请输入大于或等于6位数的账号</string>
    <string name="password_verified_tip">请输入大于或等于6位数的密码</string>
    <string name="confirm_password_length_tip">请输入大于或等于6位数的确认密码</string>
    <string name="confirm_password_verified_tip">确认密码和密码不一致</string>
    <string name="username_empty_tip">用户名不能为空</string>
    <string name="register_success_tip">注册用户成功</string>
    <string name="register_fail_tip">注册用户失败</string>
</resources>
