<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_radius">
    <!-- 弹窗内容 -->
    <TextView
        android:paddingTop="@dimen/container_padding_size"
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_logout"
        android:paddingTop="@dimen/container_padding_size"
        android:paddingBottom="@dimen/container_padding_size"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_border_stroke_white"
        android:orientation="horizontal">
        <TextView
            android:paddingTop="@dimen/container_padding_size"
            android:paddingBottom="@dimen/container_padding_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_cancel"
            android:id="@+id/dialog_cancle"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="1dp"
            android:background="@color/page_background_color"
            android:layout_height="match_parent"/>
        <TextView
            android:paddingTop="@dimen/container_padding_size"
            android:paddingBottom="@dimen/container_padding_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_sure"
            android:textColor="@color/background_blue"
            android:id="@+id/dialog_sure"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>