<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_background_color"
    android:padding="@dimen/container_padding_size"
    android:orientation="vertical"
    tools:context=".movie.activity.RegisterActivity">
    <LinearLayout
        android:background="@drawable/border_radius"
        android:orientation="vertical"
        android:paddingLeft="@dimen/container_padding_size"
        android:paddingRight="@dimen/container_padding_size"
        android:paddingBottom="@dimen/container_padding_size"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content">
                <TextView
                    android:text="*"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:layout_marginLeft="@dimen/container_padding_size"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:id="@+id/user_id_input"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content">
                <TextView
                    android:text="*"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/password_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content">
                <TextView
                    android:text="*"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/confirm_password_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content">
                <TextView
                    android:text="*"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/user_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:id="@+id/username_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="@dimen/title_width"
                android:text="@string/user_sex"
                android:layout_height="wrap_content"/>
            <EditText
                android:editable="false"
                android:id="@+id/sex_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="@dimen/title_width"
                android:text="@string/user_birthday"
                android:layout_height="wrap_content"/>
            <EditText
                android:editable="false"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/birthday_input"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="@dimen/title_width"
                android:text="@string/user_tel"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/tel_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/user_email"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/email_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/user_region"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/region_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/user_sign"
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/sign_input"
                android:background="@drawable/bottom_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/md_btn_height" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:outlineProvider="none"
        android:layout_marginTop="@dimen/container_padding_size"
        android:gravity="center"
        android:text="@string/user_register"
        android:background="@drawable/btn_radius_red_decoration"
        android:id="@+id/user_register_submit"
        android:textColor="@color/background_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_btn_height"/>
</LinearLayout>