<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/page_background_color"
    android:padding="@dimen/container_padding_size"
    android:orientation="vertical"
    tools:context=".activity.UserActivity">
    <LinearLayout
        android:padding="@dimen/container_padding_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_radius">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_avater"
                    style="@style/user_title"/>
                <com.makeramen.roundedimageview.RoundedImageView
                    app:riv_oval="false"
                    app:riv_corner_radius="@dimen/md_avater_size"
                    android:id="@+id/user_m_avater"
                    android:layout_width="@dimen/md_avater_size"
                    android:layout_height="@dimen/md_avater_size"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_name_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_username"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_m_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_tel_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_tel"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_email_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_email"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_birthday_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_birthday"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_sex_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_sex"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_sign_layout"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/container_padding_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_sign"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
            <include layout="@layout/bottom_border"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/container_padding_size"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/user_region_layout"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/user_region"
                    style="@style/user_title"/>
                <TextView
                    android:id="@+id/user_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginLeft="@dimen/container_padding_size"
                    android:src="@mipmap/icon_arrow"
                    style="@style/small_img_style"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:outlineProvider="none"
        android:layout_marginTop="@dimen/container_padding_size"
        android:gravity="center"
        android:text="@string/user_logout"
        android:background="@drawable/btn_radius_red_decoration"
        android:id="@+id/user_logout"
        android:textColor="@color/background_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_btn_height"/>
</LinearLayout>